--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Pequeña</title>
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/general.css">
+  <link rel="stylesheet" href="./styles/header.css">
+  <link rel="stylesheet" href="./styles/footer.css">
+  <link rel="stylesheet" href="./styles/general.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
@@ -46,7 +46,7 @@
 
   <main>
     <section class="start">
-      <img class="reveal-left" height="500" width="800" src="../assets/img/persona-sonrriendo.jpg" alt="">
+      <img class="reveal-left" height="500" width="800" src="./assets/img/persona-sonrriendo.jpg" alt="">
       <article>
         <div>
           <h1 class="reveal-left-1">Título de la web</h1>
@@ -68,7 +68,7 @@
         </p>
         <button class="reveal-left-2" type="button">ver servicios</button>
       </article>
-      <img class="idea reveal-right" src="../assets/img/idea.jpg" alt="imagen de una bombilla y gente al rededor">
+      <img class="idea reveal-right" src="./assets/img/idea.jpg" alt="imagen de una bombilla y gente al rededor">
     </section>
     <section class="testimonials reveal-bottom">
       <h2>Valoraciones de nuestros clientes</h2>
@@ -222,8 +222,8 @@
     <p>@Todos los derechos reservados</p>
   </footer>
 
-  <script src="../scripts/burger.js"></script>
-  <script src="../scripts/scrollreveal.js"></script>
-  <script src="../scripts/carrousel.js"></script>
+  <script src="./scripts/burger.js"></script>
+  <script src="./scripts/scrollreveal.js"></script>
+  <script src="./scripts/carrousel.js"></script>
 </body>
 </html>
