--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./styles/header.css">
   <link rel="stylesheet" href="./styles/footer.css">
   <link rel="stylesheet" href="./styles/general.css">
+  <link rel="stylesheet" href="./styles/root.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
@@ -31,9 +32,9 @@
       <nav class="menu">
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#">Equipo</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
+          <li><a href="./templates/galery.html">Galeria</a></li>
+          <li><a href="./templates/presupuesto.html">Presupuesto</a></li>
+          <li><a href="./templates/contact.html">Contacto</a></li>
           <li>
             <strong class="tel">
               644-88-16-11
@@ -70,9 +71,9 @@
       </article>
       <img class="idea reveal-right" src="./assets/img/idea.jpg" alt="imagen de una bombilla y gente al rededor">
     </section>
-    <section class="testimonials reveal-bottom">
-      <h2>Valoraciones de nuestros clientes</h2>
-      <article class="card-container">
+    <section class="testimonials">
+      <h2 class="reveal-bottom-1">Valoraciones de nuestros clientes</h2>
+      <article class="card-container  reveal-bottom">
         <div class="card">
           <h3>Cliente satisfecho</h3>
           <p>
@@ -204,7 +205,6 @@
 
     </section>
   </main>
-
   <footer>
     <div class="social-media-container">
       <i class="fab fa-instagram icon-footer"></i>
