quité el carrousel para arreglar la adaptación a movile, cuando lo arregle lo vuelvo a agregar

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Web Pequeña</title>
   <link rel="stylesheet" href="./styles/header.css">
   <link rel="stylesheet" href="./styles/footer.css">
   <link rel="stylesheet" href="./styles/general.css">
-  <link rel="stylesheet" href="./styles/root.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
@@ -43,7 +42,6 @@
       </nav>
     </div>
   </header>
-
   <main>
     <section class="start">
       <img class="reveal-left" height="500" width="800" src="./assets/img/persona-sonrriendo.jpg" alt="">
@@ -70,102 +68,7 @@
       </article>
       <img class="idea reveal-right" src="./assets/img/idea.jpg" alt="imagen de una bombilla y gente al rededor">
     </section>
-    <section class="testimonials">
-      <h2 class="reveal-bottom-1">Valoraciones de nuestros clientes</h2>
-      <article class="card-container reveal-bottom">
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nostrum impedit beatae praesentium similique sed voluptas ullam, iure, voluptatem repellat asperiores delectus quas ipsam, harum quibusdam? Neque praesentium aliquam ea!
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nostrum impedit beatae praesentium similique sed voluptas ullam, iure, voluptatem repellat asperiores delectus quas ipsam, harum quibusdam? Neque praesentium aliquam ea!
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nostrum impedit beatae praesentium similique sed voluptas ullam, iure, voluptatem repellat asperiores delectus quas ipsam, harum quibusdam? Neque praesentium aliquam ea!
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam sit suscipit est perspiciatis earum maxime dicta quae itaque, odit voluptatum corrupti voluptates similique quasi doloremque deserunt a cum reiciendis accusantium?
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star bad"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut reprehenderit nesciunt asperiores blanditiis. Veritatis fugit error officia voluptate, harum quibusdam ea, suscipit quos quas cumque ipsa aliquid laudantium ut temporibus.
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star bad"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut reprehenderit nesciunt asperiores blanditiis. Veritatis fugit error officia voluptate, harum quibusdam ea, suscipit quos quas cumque ipsa aliquid laudantium ut temporibus.
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Cliente satisfecho</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut reprehenderit nesciunt asperiores blanditiis. Veritatis fugit error officia voluptate, harum quibusdam ea, suscipit quos quas cumque ipsa aliquid laudantium ut temporibus.
-          </p>
-          <div class="stars-opinion">
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star good"></div>
-            <div class="fas fa-star bad"></div>
-          </div>
-        </div>
-      </article>
-    </section>
+  
     <section class="abaut-us">
       <h2 class="reveal-bottom">Sobre nosotros</h2>
       <article>
